update frontend deploy

--- a/frontend-manifest/frontend-deployment.yaml
+++ b/frontend-manifest/frontend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: frontend-reactjs:v1
+        image: sandyxd18/frontend-reactjs:v1
         ports:
         - containerPort: 80
 ---
