--- a/frontend-manifest/frontend-deployment.yaml
+++ b/frontend-manifest/frontend-deployment.yaml
@@ -18,6 +18,12 @@ spec:
         image: sandyxd18/frontend-tubes:v1
         ports:
         - containerPort: 80
+        env:
+          - name: VITE_BASE_URL
+            valueFrom:
+              secretKeyRef:
+                name: frontend-secret
+                key: VITE_BASE_URL
 ---
 apiVersion: v1
 kind: Service
