--- a/frontend-manifest/loadbalancer-service.yaml
+++ b/frontend-manifest/loadbalancer-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-loadbalancer
+  namespace: frontend
 spec:
   type: LoadBalancer
   selector:
