--- a/frontend-manifest/loadbalancer-service.yaml
+++ b/frontend-manifest/loadbalancer-service.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: frontend
+    # app: frontend
+    name: frontend-service
   ports:
     - port: 80
       targetPort: 80
