--- a/frontend-manifest/frontend-deployment.yaml
+++ b/frontend-manifest/frontend-deployment.yaml
@@ -18,12 +18,12 @@ spec:
         image: sandyxd18/frontend-tubes:v5
         ports:
         - containerPort: 5050
-        env:
-          - name: VITE_BASE_URL
-            valueFrom:
-              secretKeyRef:
-                name: frontend-secret
-                key: VITE_BASE_URL
+        # env:
+        #   - name: VITE_BASE_URL
+        #     valueFrom:
+        #       secretKeyRef:
+        #         name: frontend-secret
+        #         key: VITE_BASE_URL
 ---
 apiVersion: v1
 kind: Service
