--- a/nginx-reverse-proxy/nginx-configmap.yaml
+++ b/nginx-reverse-proxy/nginx-configmap.yaml
@@ -9,8 +9,8 @@ data:
         listen 443 ssl;
         server_name _;
 
-        ssl_certificate     /etc/nginx/ssl/tls.crt;
-        ssl_certificate_key /etc/nginx/ssl/tls.key;
+        ssl_certificate     /etc/nginx/ssl/reverse-proxy-tls.crt;
+        ssl_certificate_key /etc/nginx/ssl/reverse-proxy-tls.key;
 
         location / {
             proxy_pass http://backend-service.backend.svc.cluster.local;
